app/docs/data/docs/reference/3.1/GraphQl/Executor/page.mdx
---
type: Class
---

# [ApiPlatform\GraphQl\Executor](/docs/v3.1/reference/GraphQl/Executor)

Wrapper for the GraphQL facade.


```php
class ApiPlatform\GraphQl\Executor implements `<a href="/docs/v3.1/reference/GraphQl/ExecutorInterface">ApiPlatform\GraphQl\ExecutorInterface</a>`
{
    public executeQuery(GraphQL\Type\Schema $schema, $source, $rootValue, $context, null|array $variableValues, null|string $operationName, null|callable $fieldResolver, null|array $validationRules): GraphQL\Executor\ExecutionResult
}
```
## Methods

### executeQuery



```php
public executeQuery(GraphQL\Type\Schema $schema, $source, $rootValue, $context, null|array $variableValues, null|string $operationName, null|callable $fieldResolver, null|array $validationRules): GraphQL\Executor\ExecutionResult
```

#### Parameters

<table><tbody>
<tr><td>schema</td><td>GraphQL\Type\Schema</td><td></td></tr><tr><td>source</td><td></td><td></td></tr><tr><td>rootValue</td><td></td><td></td></tr><tr><td>context</td><td></td><td></td></tr><tr><td>variableValues</td><td>array</td><td></td></tr><tr><td>operationName</td><td>string</td><td></td></tr><tr><td>fieldResolver</td><td>callable</td><td></td></tr><tr><td>validationRules</td><td>array</td><td></td></tr>
</tbody>
</table>

#### Returns

GraphQL\Executor\ExecutionResult
